Always show scroll to avoid flickering

--- a/app/frontend/http_serve/assets/css/style-6.css
+++ b/app/frontend/http_serve/assets/css/style-6.css
@@ -250,7 +250,8 @@ button {
 
 body {
   background: #0087ba;
-  font-family: Arial, sans-serif; }
+  font-family: Arial, sans-serif;
+  overflow-y: scroll; }
 
 a {
   color: white;
